--- a/src/media/css/header--search.styl
+++ b/src/media/css/header--search.styl
@@ -1,5 +1,9 @@
 @import 'lib';
 
+mkt-header-child.header--search {
+    display: flex;
+}
+
 .header--search-toggle {
     image-replacement('../img/nav/search.svg', 40px, 40px);
     background-size: 40px 140px;
